Table instead of list

--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,17 @@
   <div id="result"></div>
   <div>
     <h2>Videos de YouTube</h2>
-    <ul id="videos-list"></ul>
+
+    <table class="redTable">
+      <thead>
+        <tr>
+          <th>Tiempo</th>
+          <th>Título</th>
+        </tr>
+      </thead>
+      <tbody id="videos-list">
+      </tbody>
+    </table>
   </div>
 </body>
 
