Added Remove and Update buttons

--- a/popup.html
+++ b/popup.html
@@ -20,6 +20,7 @@
         <tr>
           <th>Tiempo</th>
           <th>Título</th>
+          <th>Remover</th>
         </tr>
       </thead>
       <tbody id="videos-list">
